--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 :root {
   --font: 'Nunito', sans-serif;
+  --font-size: 20px;
   --border-radius: 4px;
   --black: #393737;
   --pink: #ffc3f2;
@@ -20,9 +21,15 @@ body {
   background-color: #c0ead4;
   background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2397e5bf' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
   color: var(--black);
+  font-size: var(--font-size);
 }
 
 h1, h2, h3, h4, h5, h6, p {
   margin: 0;
   padding: 0;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: 4px;
 }
