sets up httpclient service and makes real calls to fetch location data

--- a/src/app/features/current-weather/location/location.component.html
+++ b/src/app/features/current-weather/location/location.component.html
@@ -6,10 +6,10 @@
       <em>Current conditions:</em> {{conditions}}
     </p>
     <p class="temperature">
-      <em>Temperature:</em> {{temperature}}
+      <em>Temperature:</em> {{temperature}}°F
     </p>
     <p class="range">
-      <em>Max today:</em> {{max}} | <em>Min today:</em> {{min}}
+      <em>Max today:</em> {{max}}°F | <em>Min today:</em> {{min}}°F
     </p>
     <img class="visual"
       src="https://www.angulartraining.com/images/weather/clouds.png"
