--- a/src/app/features/current-weather/current-weather.component.html
+++ b/src/app/features/current-weather/current-weather.component.html
@@ -1,8 +1,6 @@
 <app-location-form></app-location-form>
 
-{{zipCodes$ | async}}
-
-<app-location *ngFor="let location of locations"
+<app-location *ngFor="let location of locations$ | async"
   [name]="location.name"
   [conditions]="location.conditions"
   [temperature]="location.temperature"
