--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@
 
 body {
   margin: 0;
+  min-height: 100vh;
   font-family: var(--font);
   background-color: #c0ead4;
   background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2397e5bf' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
