makes weather image dynamic

--- a/src/app/features/current-weather/location/location.component.html
+++ b/src/app/features/current-weather/location/location.component.html
@@ -12,7 +12,7 @@
       <em>Max today:</em> {{max}}°F | <em>Min today:</em> {{min}}°F
     </p>
     <img class="visual"
-      src="https://www.angulartraining.com/images/weather/clouds.png"
+      [src]="visualSrc"
     />
   </div>
 </app-well>
