renames current-weather to locations; sets up delete function in data.service

--- a/src/app/features/locations/locations.component.html
+++ b/src/app/features/locations/locations.component.html
@@ -1,9 +1,11 @@
 <app-location-form></app-location-form>
 
-<app-location *ngFor="let location of locations$ | async"
+<app-location *ngFor="let location of locations$ | async; trackByFn"
+  [id]="location.id"
   [name]="location.name"
   [conditions]="location.conditions"
   [temperature]="location.temperature"
   [max]="location.max"
   [min]="location.min"
+  (deleted)="onDelete(location.id)"
 ></app-location>
