--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,9 +25,13 @@ body {
   font-size: var(--font-size);
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, a {
   margin: 0;
   padding: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 label {
