--- a/src/app/core/page-not-found/page-not-found.component.html
+++ b/src/app/core/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
-<app-well
-  title="404"
-  [canClose]="false"
->
-  <p>Oh no! This page doesn't exist</p>
+<app-well [canClose]="false">
+  <h3 top>
+    404
+  </h3>
+  <p container>Oh no! This page doesn't exist</p>
 </app-well>
