--- a/src/app/shared/well/well.component.scss
+++ b/src/app/shared/well/well.component.scss
@@ -9,13 +9,8 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-bottom: 16px;
-}
-
-.title {
-  margin-bottom: 16px;
 }
 
 .container {
-  padding: 0 16px;
+  padding: 16px;
 }
