gets zip code from url and displays it on forecast page

--- a/src/app/features/forecast/forecast.component.html
+++ b/src/app/features/forecast/forecast.component.html
@@ -9,7 +9,7 @@
 </app-well>
 <app-well>
   <h3 top>
-    city name
+    city name {{zipCode$ | async}}
   </h3>
   <div container
     class="forecast"
